[dimas] - search by title and filter by categoryId for get all courses, and applying in swagger
